{
    "name": "PlayerInputControl",
    "maps": [
        {
            "name": "Movement",
            "id": "ac5d0f2e-dc81-425d-b933-70c2c2177f9a",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "24e35a12-4262-45da-9bc6-c27072e56c56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bc934faa-543e-4fdc-921d-bd5645ee7134",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c8d8cf28-da09-4e09-ba0b-dc7b6a33a345",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0817c862-901a-4d7b-a9cc-93e83752fc12",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4f8c1769-2fc2-4c1c-aa75-6f2eb75dc4fe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9e8203cb-1392-4fc9-a901-aa87d09992ef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}